fix: Updated JS overflow technique only in case of builder expanded

--- a/inc/assets/css/ast-builder-customizer-rtl.css
+++ b/inc/assets/css/ast-builder-customizer-rtl.css
@@ -460,7 +460,7 @@
     width: auto;
     padding: 0;
     max-height: 60%;
-    overflow: auto !important;
+    overflow: auto;
     transition: all 0.2s;
     transform: translateY(100%);
     backface-visibility: hidden;
